apps/docs/versioned_docs/version-1.0.2/layouts/split.mdx
---
sidebar_position: 2
title: Split
description: A responsive layout component for creating two-column layouts with smart stacking, ratio control, and optional resizing.
---

import SplitDemo from '@site/src/components/Demo/SplitDemo';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import { Split, Left, Right } from '@site/src/components/UI/split';

## Overview

The `Split` component simplifies the creation of two-column layouts such as **sidebars with content**, **image and text sections**, or **dashboard layouts**.  
It supports ratios, gaps, responsive stacking, and optional resizing.

## Preview

Play with the settings and preview the component in action:

<SplitDemo />

## Installation

<Tabs>
  <TabItem value="npm" label="npm" default>
    ```bash
    npx @mindfiredigital/ignix-ui add split
    ```
  </TabItem>
  <TabItem value="yarn" label="Yarn">
    ```bash
    yarn @mindfiredigital/ignix-ui add split
    ```
  </TabItem>
  <TabItem value="pnpm" label="pnpm">
    ```bash
    pnpm @mindfiredigital/ignix-ui add split
    ```
  </TabItem>
</Tabs>

## Usage

Import the component:

```tsx
import { Split, Left, Right } from './components/ui';
````

### Basic Example

```tsx
<Split ratio="30:70" mobile="stack" gap="normal">
  <Left>
    <div className="p-4 bg-red-500 text-white rounded">Sidebar</div>
  </Left>
  <Right>
    <div className="p-4 bg-yellow-500 text-white rounded">Main Content</div>
  </Right>
</Split>
```

## Props

| Prop      | Type                                                          | Default    | Description                                              |
| --------- | ------------------------------------------------------------- | ---------- | -------------------------------------------------------- |
| ratio     | `"30:70"` \| `"40:60"` \| `"50:50"` \| `"60:40"` \| `"70:30"` | `"50:50"`  | Defines the column ratio between left and right sections |
| gap       | `"none"` \| `"small"` \| `"normal"` \| `"large"`              | `"normal"` | Controls the space between the two sections              |
| mobile    | `"stack"` \| `"keep-split"` \| `"reverse"`                    | `"stack"`  | Defines how layout behaves on small screens              |
| minWidth  | `string` (e.g. `"300px"`, `"20rem"`)                          | `"300px"`  | Minimum width before stacking occurs                     |
| resizable | `boolean`                                                     | `false`    | Allows user to drag and resize split ratio dynamically   |
| className | `string`                                                      | `""`       | Additional CSS classes                                   |
| children  | `<Left>` and `<Right>` components                             | Required   | Defines the left and right sections of the split layout  |

## Examples

### Dashboard Layout

<Tabs>
  <TabItem value="preview" label="Preview" default>

  <Split ratio="20:80" gap="large" mobile="keep-split">
    <Left>
      <div className="bg-gray-900 text-white p-4 rounded">Sidebar</div>
    </Left>
    <Right>
      <div className="bg-gray-100 p-4 rounded text-black">Main Dashboard Area</div>
    </Right>
  </Split>

  </TabItem>
  <TabItem value="code" label="Code">

```tsx
<Split ratio="20:80" gap="large" mobile="keep-split">
  <Left>
    <div className="bg-gray-900 text-white p-4 rounded">Sidebar</div>
  </Left>
  <Right>
    <div className="bg-gray-100 p-4 rounded">Main Dashboard Area</div>
  </Right>
</Split>
````

  </TabItem>
</Tabs>

---

### Resizable Split

<Tabs>
  <TabItem value="preview" label="Preview" default>

  <Split ratio="50:50" resizable>
    <Left>
      <div className="bg-red-500 text-white p-4 rounded">Drag to Resize</div>
    </Left>
    <Right>
      <div className="bg-yellow-500 text-white p-4 rounded">Resizable Panel</div>
    </Right>
  </Split>

  </TabItem>
  <TabItem value="code" label="Code">

```tsx
<Split ratio="50:50" resizable>
  <Left>
    <div className="bg-red-500 text-white p-4 rounded">Drag to Resize</div>
  </Left>
  <Right>
    <div className="bg-yellow-500 text-white p-4 rounded">Resizable Panel</div>
  </Right>
</Split>
```

  </TabItem>
</Tabs>
